--- a/totalTripperLokaverkefni/styles.scss
+++ b/totalTripperLokaverkefni/styles.scss
@@ -1,16 +1,17 @@
 html {
     background-image: url(img/yellow-boat.jfif);
     background-size: cover;
-
+    font-family: Lora;
 }
 
 .searchBox {
-    width: 1300px;
+    font-family: Lora;
+    width: 1400px;
     margin: 10% auto;
     // border: rgba(235, 194, 61, 1.0) dotted 10px;
     // background-color: rgba(48, 60, 108, 0.4);
     border-radius: 10px;
-    padding: 50px;
+    padding: 50px; 
     
     h2 {
         margin-top: 0;
@@ -18,6 +19,7 @@ html {
     }
 
     input {
+        font-family: Lora;
         padding: 10px;
         font-size: 16px;
         margin-right: 10px;
@@ -34,11 +36,18 @@ html {
     background-color: white;
     padding: 0 20px;
     margin-right: 20px;
+    transition: .5s ease;
+
     p {
         padding: 0 5px;
         margin: auto ;
     }
 }
+
+.guests:hover{
+    box-shadow: 0 0 0 2px #303C6C;
+    transition: .5s ease;
+    }
 
 .search {
     display: flex;
@@ -46,6 +55,43 @@ html {
     justify-content: center;
 }
 
+.popUpGuests {
+    width: 25%;
+    padding: 10px;
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    float: right;
+    margin-right: 172px;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 2px 16px rgba(0,0,0,0.15);
+    box-shadow: black 2px 16px rgba($color: #000000, $alpha: 0.15);
+  }
+
+.choseGuest {
+    display: flex;
+    flex-direction: row;
+    justify-content: right; 
+    .chose {
+        display: flex;
+        border: #303C6C 1px solid;
+        padding: 15px;
+
+    }
+
+    .group {
+        margin-right: auto;
+    }
+
+    p {
+        justify-self: right;
+        padding: 15px;
+    }
+}
+
+.hide {
+    display: none;
+}
 
 @import "header";
 @import "button";
