--- a/totalTripperLokaverkefni/button.scss
+++ b/totalTripperLokaverkefni/button.scss
@@ -1,9 +1,9 @@
 .searchButton {
-  color: #303C6C !important;
+  color: #ffffff !important;
   text-transform: uppercase;
   text-decoration: none;
-  background: #ffffff;
-  padding: 20px;
+  background: #303C6C;
+  padding: 5px 20px;
   border: 4px solid #303C6C !important;
   display: inline-block;
   transition: all 0.4s ease 0s;
