--- a/totalTripperLokaverkefni/scss/styles.scss
+++ b/totalTripperLokaverkefni/scss/styles.scss
@@ -34,7 +34,9 @@ html {
     background-color: white;
     padding: 0 20px;
     margin-right: 20px;
+    margin: auto;
     p {
+        white-space: nowrap;
         padding: 0 5px;
         margin: auto ;
     }
