flight fallegra, bbreytti möppu skipulagi

--- a/totalTripperLokaverkefni/scss/button.scss
+++ b/totalTripperLokaverkefni/scss/button.scss
@@ -1,3 +1,4 @@
+@import "config";
 .searchButton {
   color: #303C6C !important;
   text-transform: uppercase;
@@ -10,6 +11,25 @@
   }
 
   .searchButton:hover {
+    color: #ffffff !important;
+    background: #f6b93b;
+    border-color: #f6b93b !important;
+    transition: all 0.4s ease 0s;
+    }
+    
+.bookButton {
+  color: #303C6C !important;
+  text-transform: uppercase;
+  text-decoration: none;
+  background: #f6b93b;
+  margin: 45px;
+  padding: 10px;
+  border: 1px solid #303C6C !important;
+  border-radius: 15px;
+  display: inline-block;
+  transition: all 0.4s ease 0s;
+  }
+  .bookButton:hover {
     color: #ffffff !important;
     background: #f6b93b;
     border-color: #f6b93b !important;
