--- a/totalTripperLokaverkefni/styles.scss
+++ b/totalTripperLokaverkefni/styles.scss
@@ -96,6 +96,7 @@ html {
     display: none;
 }
 
-@import "header";
-@import "button";
-@import "config";
+@import "scss/header";
+@import "scss/button";
+@import "scss/config";
+@import "scss/flight";
