--- a/totalTripperLokaverkefni/scss/flight.scss
+++ b/totalTripperLokaverkefni/scss/flight.scss
@@ -9,11 +9,34 @@
   }
 }
 
+.content {
+  max-width: 1200px;
+  margin: auto;
+}
+
+.menu{
+  width: fit-content;
+
+  button {
+    padding: 20px 40px;
+    background-color: white;
+    border-bottom: none;
+    border: solid;
+    border-bottom: none;
+  }
+}
+
+
 .cards {
+    background-color: white;
+    border: 1px solid grey;
+//    border-top:none;
     display: flex;
     flex-wrap: wrap;
-    margin-left: -10px;
-    margin-right: -10px;
+    width: 100%;
+    margin: auto;
+//    margin-left: -10px;
+//    margin-right: -10px;
 
     &__col {
         padding-right: 10px;
@@ -30,13 +53,12 @@
 .card {
     display: flex;
     flex-direction: column;
-  
-   
     margin-bottom: 10px;
     padding: 10px;
-    width: 100%;
+    width: 66%;
     height: 100%;
-    max-width: 600px;
+    margin-left: auto;
+//    max-width: 600px;
     max-height: 300px;
     overflow: hidden;
   
@@ -58,22 +80,20 @@
     margin-bottom: 0px;
   }
   &__PriceStar{
-    /* flex-direction: row; */
-    display: flex;
-    flex: 2;
-    margin:5px;
+    flex-direction: column; 
+    // display: flex;
+    // flex: 2;
+    // margin:5px;
   }
   &__price{
     color: gray;
     margin-bottom:0px;
   }
-  &__stars{
-    padding-left: 9em;
+  // &__stars{
+  //   padding-left: 9em;
     /* flex: 0 0 200px;   /* þetta breytir stærð stjarnanna */
-  }
-  &__star{
-    max-width: 10%;
-  }
+  // }
+  
   &__content {
     display: flex;
     flex: 2;
