--- a/javascript/styles.css
+++ b/javascript/styles.css
@@ -1,6 +1,7 @@
 .main {
-    width: 1400px;
+    width: 1200px;
     margin:0 auto;
+    padding: 1em;
 }
 .main__section{
    
@@ -10,17 +11,25 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
-}
     
 }
+    
 .search__form {
-    margin:0 auto;
+    border: 2px solid black;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    padding: 1em;
+    margin-bottom: 1em;
+    height: 100%;
+}
+.searchInput {
+    width: 100%;
 }
 .main__data{
     border:2px solid #000000;
     overflow: scroll;
-    height: 500px;
+    max-height: 500px;
 }
 table {
     width: 100%;
