--- a/totalTripperLokaverkefni/styles.scss
+++ b/totalTripperLokaverkefni/styles.scss
@@ -1,11 +1,13 @@
 html {
-    background-image: url(img/yellow-boat.jfif);
+    background: url(img/yellow-boat.jfif) scroll;
     background-size: cover;
+    background-repeat: no-repeat;
     font-family: Lora;
 }
 
-.content {
+.index__content {
     max-width: 1200px;
+    margin: auto;
 }
 .searchBox {
     font-family: Lora;
@@ -32,7 +34,7 @@ html {
     }
 
     .place {
-        padding-right: 300px;
+        padding-right: 200px;
     }
     
 }
@@ -64,7 +66,7 @@ input:hover {
     transition: .5s ease;
 }
 
-.search {
+.search{
     width: 95%;
     display: flex;
     padding: 10px;
@@ -130,7 +132,7 @@ input:hover {
     text-indent: 40px;
 }
 
- @media(max-width: 600px){
+ @media (max-width: 600px){
     .content {
         width: 600px;
     }
@@ -145,3 +147,4 @@ input:hover {
 @import "scss/button";
 @import "scss/config";
 @import "scss/flight";
+@import "scss/checkbox";
