lagaði smá display ves

--- a/totalMerger/scss/flight.scss
+++ b/totalMerger/scss/flight.scss
@@ -151,7 +151,8 @@
     text-align: center;
     .airline {
       &__image {
-        width: 180px;
+        width: 150px;
+        height: 150px;
       }
     }
   }
