--- a/totalMerger/scss/flight.scss
+++ b/totalMerger/scss/flight.scss
@@ -136,7 +136,7 @@
   }
 
   &__airline {
-    display: flex;;
+    display: flex;
     flex-direction: column-reverse;
     text-align: right;
   }
