--- a/totalMerger/button.scss
+++ b/totalMerger/button.scss
@@ -4,9 +4,10 @@
   text-decoration: none;
   background: #303C6C;
   padding: 5px 20px;
-  border: 4px solid #303C6C !important;
+  border: 1px solid #303C6C !important;
   display: inline-block;
   transition: all 0.4s ease 0s;
+  margin: 10px;
   }
 
   .searchButton:hover {
