--- a/totalMerger/scss/button.scss
+++ b/totalMerger/scss/button.scss
@@ -1,13 +1,13 @@
-@import "config";
 .searchButton {
-  color: #303C6C !important;
+  color: #ffffff  !important;
   text-transform: uppercase;
   text-decoration: none;
-  background: #ffffff;
-  padding: 5px;
-  border: 4px solid #303C6C !important;
+  background: #303C6C;
+  padding: 5px 20px;
+  border: 1px solid #303C6C !important;
   display: inline-block;
   transition: all 0.4s ease 0s;
+  margin: 10px;
   }
 
   .searchButton:hover {
@@ -22,10 +22,10 @@
   text-transform: uppercase;
   text-decoration: none;
   background: #f6b93b;
-  margin: 45px;
+  margin: 10px;
   padding: 10px;
   border: 1px solid #303C6C !important;
-  border-radius: 15px;
+  border-radius: 10px;
   display: inline-block;
   transition: all 0.4s ease 0s;
   }
