--- a/totalMerger/scss/flight.scss
+++ b/totalMerger/scss/flight.scss
@@ -1,3 +1,4 @@
+
 .dest{
   &__title{
   font-size: 50px;
@@ -9,6 +10,9 @@
   }
 }
 
+html{
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 .content {
   max-width: 1200px;
@@ -36,7 +40,7 @@
 }
 
 .filter__content {
-  background-color: white;
+  background-color: rgb(241, 240, 240);
   width: 1200px;
   display: flex;
   flex-direction: column;
@@ -81,21 +85,25 @@
   justify-content: space-evenly;
 }
 
+
 .flight {
+  font-family: Arial, Helvetica, sans-serif;
   width: 100%;
-  background-color: lightgrey;
+  background-color: white;
   margin:0 1em;
+  padding: 1em 0;
   cursor: pointer;
   box-sizing: border-box;
-  border: 1px solid black;
-  margin-bottom: 1em;;
-  @media (max-width: 799px) {
-    width: 100%;
+  border: 1px solid lightgrey;
+  border-radius: 2.5px;
+  margin-bottom: 1em;
+  box-shadow: 0px 0px 5px 0px rgba(194,194,194,0.87);  @media (max-width: 799px) {
+  width: 100%;
   }
-  &:hover {
-    border-width: 5px;
-    background-color: lightgoldenrodyellow;
-  }
+  // &:hover {
+  //   border-width: 5px;
+  //   background-color: lightgoldenrodyellow;
+  // }
 
 
   &__info {
@@ -110,7 +118,7 @@
     display:inline-flex;
     flex-direction: column;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
 
   }
   .number{
@@ -123,18 +131,59 @@
     }
   }
 
-  &__destination{
-    align-self: flex-end;
+  &__plan{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    
+  }
+
+  &__planDest{
+    align-self: center;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin: 0 10px;
+  }
+  &__origShort{
+    font-size: 1em;
+  }
+
+  &__depTime{
+    font-weight: bold;
+    font-size: 1.5em;
+  }
+  &__planDest{
+    align-self: center;
     display: flex;
     flex-direction: column;
     text-align: center;
     
   }
   &__destShort {
-    font-weight: bold;
-    font-size: 3em;
+    font-size: 1em;
   }
 
+  &__arrTime {
+    font-weight: bold;
+    font-size: 1.5em;
+  }
+
+  &__duration{
+    align-self: center;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+
+  }
+
+  &__duration{
+    font-size: 10px;
+  }
+
+  &__dec{
+    font-family: 'Courier New', Courier, monospace;
+  }
   &__airline {
     display: flex;
     flex-direction: column-reverse;
@@ -148,12 +197,26 @@
   }
   &__airline {
     display: flex;
-    align-self: flex-end;
+    align-self: center;
     text-align: center;
     .airline {
       &__image {
-        width: 150px;
-        height: 150px;
+        width: 50px;
+        height: 50px;
+      }
+    }
+  }
+
+  &__price {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    .ticket{
+      &__price{
+        font-weight: bold;
+        font-size: 2em;
       }
     }
   }
