--- a/totalMerger/scss/hotel.scss
+++ b/totalMerger/scss/hotel.scss
@@ -11,59 +11,95 @@
 }
 
 .hotel {
-    width: 100%;
-    background-color: lightgrey;
-    margin:0 1em;
-    cursor: pointer;
-    box-sizing: border-box;
-    border: 1px solid black;
-    margin-bottom: 1em;;
-    @media (max-width: 799px) {
-      width: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 80%;
+  background-color: white;
+  margin:0 1em;
+  padding: 1em 0;
+  cursor: pointer;
+  box-sizing: border-box;
+  border: 1px solid lightgrey;
+  border-radius: 2.5px;
+  margin-bottom: 1em;
+  box-shadow: 0px 0px 5px 0px rgba(194,194,194,0.87);  @media (max-width: 799px) {
+  width: 100%;
     }
-    &:hover {
-      border-width: 5px;
-      background-color: lightgoldenrodyellow;
-    }
+    // &:hover {
+    //   border-width: 5px;
+    //   background-color: lightgoldenrodyellow;
+    // }
 
     &__info {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        }
-      
-        &__name {
+      width: 100%;
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: space-between;
+
+      .info{
+        &__info{
           display:inline-flex;
           flex-direction: column;
           flex-wrap: wrap;
-          justify-content: flex-start;
-      
-        }
-        &__address {
-            display:inline-flex;
-            flex-direction: column;
-            flex-wrap: wrap;
-            justify-content: flex-start;
-        
-          }
-        &__price {
-        display:inline-flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        justify-content: flex-start;
-        }
 
+        }
+      }
+    }
+      
+    &__name {
+      align-self: start;
+      display:inline-flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+      margin-bottom: 5px;
+    }
+
+    &__address {
+      display:inline-flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+    }
+
+    &__price {
+      display:inline-flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      margin: 10px 60px;
+
+      .room__price{
+        padding: 5px 0;
+        font-size: 2em;
+      }
+    }
+ 
+    &__image {
+      display: flex;
+      align-self: flex-start;
+      text-align: center;
+      margin: 0 20px;
+      .image {
         &__image {
-            display: flex;
-            align-self: flex-start;
-            text-align: center;
-            // .image {
-            //   &__image {
-            //     width: 300px;
-            //   }
-            }
-          }
+            width: 300px;
+            height: auto;
+            object-fit: contain;
+        }
+    }
+            
+}
+  .content__right{
+    display: flex;
+    flex-flow: row wrap;
+  }
+
+  .content__left{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-between;
+    margin: 20px;
+  }
+
+}
 
 
