--- a/totalMerger/scss/flight.scss
+++ b/totalMerger/scss/flight.scss
@@ -23,6 +23,7 @@ html{
 }
 
 .menu{
+  border-bottom: 5px solid #F4976C;
   width: 100%;
 
   button {
@@ -32,7 +33,6 @@ html{
   }
   &__tab {
       cursor: pointer;
-      border-bottom: 1px solid black;
   }
   &__tab--active {
     border-bottom: none;
@@ -50,6 +50,7 @@ html{
 
 
 .page__title {
+  
   width: 100%;
   padding: 10px;
   text-align: center;
