--- a/totalMerger/scss/header.scss
+++ b/totalMerger/scss/header.scss
@@ -1,11 +1,12 @@
 header { 
     // max-width: 1200px;
     margin: auto;
+    height: 65px;
 }
 
-h1 {
-    margin: 0;
-    font-size: 20px;
+.index__portal {
+    margin-left: 10px;
+    font-size: 40px;
     font-family: Lora;
     color: #ffffff;
 }
