--- a/totalMerger/scss/hotel.scss
+++ b/totalMerger/scss/hotel.scss
@@ -17,15 +17,13 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     padding-top: 20px ;
+
   }
 
-  .image__image {
-    width: 300px;
-}
 
 .hotel {
   font-family: Arial, Helvetica, sans-serif;
-  width: 80%;
+  width: 100%;
   background-color: white;
   margin:0 1em;
   padding: 1em 0;
@@ -95,8 +93,8 @@
       .image {
         &__image {
             width: 300px;
-            height: auto;
-            object-fit: contain;
+            height: 300px;
+            object-fit: cover;
         }
     }
             
