--- a/totalMerger/scss/styles.scss
+++ b/totalMerger/scss/styles.scss
@@ -3,7 +3,9 @@ html {
     background-size: cover;
 
 }
-
+#tab1, #tab2, #tab3 {
+    background-color: white;
+}
 .searchBox {
     width: 1300px;
     margin: 10% auto;
