--- a/totalMerger/scss/config.scss
+++ b/totalMerger/scss/config.scss
@@ -9,6 +9,7 @@ $lightgrey: #aaa;
 $lightergrey: #ccc;
 $darkblue: #303C6C;
 $orange: #F4976C;
+$lighter-orange: rgb(247, 198, 175);
 $yellow: #FBE8A6;
 $bluegrey: #B4DFE5;
 $lighterbluegrey: #D2FDFF; 
