--- a/totalMerger/styles.scss
+++ b/totalMerger/styles.scss
@@ -175,7 +175,7 @@ input:hover {
 
 @import "scss/header";
 @import "scss/button";
-
+@import "scss/popup";
 @import "scss/flight";
 @import "scss/checkbox";
 @import "scss/hotel";
