--- a/totalMerger/scss/flight.scss
+++ b/totalMerger/scss/flight.scss
@@ -1,5 +1,6 @@
 #content {
   margin: 0 auto;
+  width:78%;
 }
 .dest{
   &__title{
@@ -57,11 +58,29 @@ html{
   background-color: rgb(241, 240, 240);
   width: 1200px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
   border-left: 1px solid #aaa;
 }
 
+.filter {
+  width: 20%;
+  margin: 20px 0 0 20px;
+  background-color: white;
+  border-radius: 20px;
+
+  &__title {
+    padding: 1em;
+    text-align: center;
+  }
+  &__pair {
+    padding: 0.5em;
+  }
+  &__keywords {
+    border-top: 1px dashed $orange;
+  }
+}
 
 .page__title {
   
@@ -86,7 +105,7 @@ html{
 
   .filter__type { 
     padding: 0 10px;
-    margin: 10px 0;
+    margin: 10px 0 0 10px;
   }
 
   
@@ -104,7 +123,7 @@ html{
 
 .flight {
   font-family: Arial, Helvetica, sans-serif;
-  width: 70%;
+  width: 100%;
   background-color: white;
   margin:0 1em;
   padding: 1em 0;
