bætt við destination picker

--- a/totalMerger/scss/styles.scss
+++ b/totalMerger/scss/styles.scss
@@ -1,6 +1,7 @@
 html {
     background-image: url(img/yellow-boat.jfif);
     background-size: cover;
+    font-size: 12px;
 
 }
 #tab1, #tab2, #tab3 {
