--- a/totalMerger/scss/flight.scss
+++ b/totalMerger/scss/flight.scss
@@ -173,6 +173,25 @@ html{
     
   }
 
+  &__origin {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  &__dest {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  &__package {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;;
+  }
+
   &__planDest{
     align-self: center;
     display: flex;
