--- a/totalMerger/scss/button.scss
+++ b/totalMerger/scss/button.scss
@@ -3,7 +3,7 @@
   text-transform: uppercase;
   text-decoration: none;
   background: rgba(48, 60, 108, 0.322);
-  padding: 20px 20px;
+  padding: 13px 20px;
   border: 1px solid #303C6C !important;
   border-radius: 2px;
   display: inline-block;
@@ -19,7 +19,7 @@
     
     .bookButton {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 30px 10px 10px 10px;
+      // margin: 30px 10px 10px 10px;
       color: #000  !important;
       text-transform: uppercase;
       text-decoration: none;
