--- a/totalMerger/scss/flight.scss
+++ b/totalMerger/scss/flight.scss
@@ -269,10 +269,51 @@ html{
     .ticket{
       &__price{
         font-weight: bold;
-        font-size: 2em;
+        font-size: 1.5em;
+      }
+      &__total{
+        margin-bottom: 1em;
       }
     }
   }
+}
+
+.index__search{
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;   
+  padding: 20px 0;
+
+  .place{
+    padding: 15px 2em;
+    box-sizing: border-box;
+    border-radius: 2.5px;
+    margin-bottom: 1em;
+    box-shadow: 0px 0px 5px 0px rgba(117, 117, 117, 0.87); 
+  
+  }
+  .TinyPicker {
+    padding-right: 2em;
+    box-sizing: border-box;
+    border-radius: 2.5px;
+    margin-bottom: 1em;
+    box-shadow: 0px 0px 5px 0px rgba(117, 117, 117, 0.87);
+  }
+
+  .guests{
+    padding-right: 2em;
+    box-sizing: border-box;
+    border-radius: 2.5px;
+    margin-bottom: 1em;
+    box-shadow: 0px 0px 5px 0px rgba(117, 117, 117, 0.87);  
+  
+  }
+
+  .searchButton{
+    padding: 13px 20px;
+  }
+
 }
 
 #flights {
