Hægt að nota leitina að ofan án þess að refresha gögnum

--- a/totalMerger/scss/styles.scss
+++ b/totalMerger/scss/styles.scss
@@ -2,7 +2,7 @@ html {
     background-image: url(img/yellow-boat.jfif);
     background-size: cover;
 }
-#tab1, #tab2, #tab3 {
+#tab1, #tab2, #tab3,#tab4 {
     background-color: white;
 }
 .searchBox {
