--- a/totalMerger/styles.scss
+++ b/totalMerger/styles.scss
@@ -175,6 +175,7 @@ input:hover {
 
 @import "scss/header";
 @import "scss/button";
+@import "scss/filter.scss";
 @import "scss/popup";
 @import "scss/flight";
 @import "scss/checkbox";
