--- a/totalMerger/scss/flight.scss
+++ b/totalMerger/scss/flight.scss
@@ -39,6 +39,7 @@ html{
     border-left: 1px dashed #F4976C;  
     border-right: 1px dashed #F4976C;  
     background-color: #fff;
+
   }
   &__tab {
       cursor: pointer;
@@ -46,43 +47,14 @@ html{
   &--active {
     
     border-bottom: none;
-    background-color: #F4976C;
+    background-color:$orange;
   }
 
 }
 .bookButton {
   cursor: pointer;
 }
-.filter__content {
-  background-color: rgb(241, 240, 240);
-  width: 1200px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  border-left: 1px solid #aaa;
-}
 
-.filter {
-  width: 20%;
-  margin: 20px 0 0 20px;
-  background-color: white;
-  border-radius: 20px;
-
-  &__title {
-    padding: 1em;
-    text-align: center;
-  }
-  &__pair {
-    padding: 0.5em;
-  }
-  &__label {
-    cursor: pointer;
-  }
-  &__keywords {
-    border-top: 1px dashed $orange;
-  }
-}
 
 .page__title {
   
