--- a/totalMerger/scss/filter.scss
+++ b/totalMerger/scss/filter.scss
@@ -15,6 +15,7 @@
     border-radius: 20px;
   
     &__title {
+        display: block;
       padding: 1em;
       text-align: center;
       border-bottom: dashed $orange;
