--- a/totalMerger/scss/popup.scss
+++ b/totalMerger/scss/popup.scss
@@ -1,5 +1,4 @@
 .popup {
-    
     position: fixed;
     top: 25%;
     left: 25%;
@@ -13,10 +12,14 @@
     width: 50vw;
     background-image: url('../img/yellow-boat.jfif');
     background-size: cover;
+    border-radius: 30px;
+    box-shadow: 0px 0px 5px 0px rgba(194, 194, 194,0.87);
+    
 
     &__content {
         color: whitesmoke;
-        justify-content: space-evenly;  
+        justify-content: space-evenly;
+
     }
     &__headline {
         font-size: 2.5em;
@@ -31,7 +34,7 @@
         cursor: pointer;
 
         &:hover{
-            transition: 300ms ease-in-out;
+            transition: $transition;
             background-color:$lighter-orange;
             
         }
