--- a/totalMerger/scss/package.scss
+++ b/totalMerger/scss/package.scss
@@ -65,6 +65,12 @@
         border-color: $orange;
         
     }
+    &__quantity{
+        font-size: 0.75em;
+    }
+    &__perprice{
+        font-size: 0.75em;
+    }
     &__button{  
         background-color: $orange;
         border-radius: 10px;
@@ -125,13 +131,18 @@
         width: 100%;
         background-color: white;
         text-align: right;
-        padding:1em 0;
+        padding:1em 0;        
     }
     &__totalPrice {
-        margin: 1em;
+        margin: 0.5em;
         font-size: 2em;
+    } 
+    &__book{
+        margin-top: 1em ;
+        margin-right: 1em;
     }
 }
+
 #content.content__package {
     width: 100%;
 }
