miklar líkur á að það séu trips á sama degi og farið er út

--- a/totalMerger/scss/trip.scss
+++ b/totalMerger/scss/trip.scss
@@ -57,6 +57,9 @@
             &__price{
                 font-size: 1.5em;
             }
+            &__people {
+                text-align: right;
+            }
 
             
         }
